--- a/index.html
+++ b/index.html
@@ -5,41 +5,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Distributeur de billets</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+	<link rel="stylesheet" href="test.css">
 </head>
 <body class="bg-light">
 
-<div class="container py-5">
-	<div class="row justify-content-center">
-		<div class="col-md-6">
-			<div class="card shadow rounded-4">
-				<div class="card-body">
-					<h2 class="card-title text-center mb-4">Distributeur de billets</h2>
-
-					<form id="atm-form">
-						<div class="mb-3">
-							<label for="amount" class="form-label">Montant à retirer (€)</label>
-							<input type="number" class="form-control" id="amount" placeholder="Ex : 50" required>
-						</div>
-
-						<div class="mb-3">
-							<label for="accountType" class="form-label">Type de compte</label>
-							<select class="form-select" id="accountType" required>
-								<option value="">-- Sélectionnez --</option>
-								<option value="courant">Compte courant</option>
-								<option value="epargne">Compte épargne</option>
-							</select>
-						</div>
-
-						<div class="d-grid">
-							<button type="submit" class="btn btn-primary">Retirer</button>
-						</div>
-					</form>
-
-					<div class="mt-4" id="resultMessage"></div>
-				</div>
-			</div>
-		</div>
-	</div>
+<div id="container" class="container py-5">
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
